# alpha-toe-zero

./: .dockerignore  .gitignore  2d_index.html  Dockerfile  README.md  TECHNICAL_DOCUMENTATION.md  diagnose.py  docker-compose.yml  export_onnx.py  first_player_advantage.ipynb  main.md  main.py  model_4x4x4.onnx  play.py  pyproject.toml  qubic.py  qubic_export.py  test_qubic.py  test_sanity.py  tournament.py
docs/: main.md  mcts_interactive_explainer.ipynb  ucb.md
notebooks/: trees.ipynb
teach/: README.md  TODO.md  build_pages.py  index.html  index.html.backup  package-lock.json  package.json  vite.config.js
teach/docs/: interactive_py.md
teach/notebooks/: mcts.ipynb  nn.ipynb  self-play.ipynb  self_play.ipynb  start-here.ipynb
teach/src/: app.js  components-animation.js  game.js  hero-animation.js  mcts.js  model.js  qubic-animation.js  show_3d_ttt_game.js  styles.css  ui.js  utils.js
