[project]
name = "alpha-toe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "onnx>=1.19.1",
    "tqdm>=4.0.0",
    "jax>=0.8.0",
    "ipywidgets>=8.1.8",
    "anywidget>=0.9.19",
    "livereload>=2.7.1",
]
